--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
+    "galio-framework": "^0.8.0",
     "native-base": "^3.3.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
