--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-floating-label-input": "^1.3.11",
+    "react-native-reanimated": "1.13.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-svg": "^12.1.1",
-    "react-native-web": "0.17.1"
+    "react-native-svg-transformer": "^1.0.0",
+    "react-native-vector-icons": "^9.0.0",
+    "react-native-web": "^0.17.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
