--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-element-dropdown": "^1.6.1",
     "react-native-floating-label-input": "^1.3.11",
+    "react-native-paper": "^4.11.2",
     "react-native-reanimated": "1.13.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-svg": "^12.1.1",
