--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@eva-design/eva": "^2.1.1",
+    "@ui-kitten/components": "^5.1.1",
+    "@ui-kitten/eva-icons": "^5.1.1",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
     "galio-framework": "^0.8.0",
@@ -22,13 +25,14 @@
     "react-native-paper": "^4.11.2",
     "react-native-reanimated": "1.13.2",
     "react-native-safe-area-context": "^3.3.2",
-    "react-native-svg": "^12.1.1",
+    "react-native-svg": "12.1.1",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "^0.17.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@expo/webpack-config": "^0.16.17"
   },
   "private": true
 }
