rectangle-orange añadido y mejora del Screen 1

--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@eva-design/eva": "^2.1.1",
     "@ui-kitten/components": "^5.1.1",
     "@ui-kitten/eva-icons": "^5.1.1",
+    "add": "^2.0.6",
+    "buffer": "^5.4.3",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
     "galio-framework": "^0.8.0",
+    "gl-react": "^4.0.1",
+    "gl-react-expo": "^4.0.1",
     "native-base": "^3.3.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
