--- a/package.json
+++ b/package.json
@@ -11,11 +11,19 @@
   },
   "dependencies": {
     "@eva-design/eva": "^2.1.1",
+    "@expo-google-fonts/inter": "^0.2.2",
+    "@react-native-async-storage/async-storage": "^1.16.1",
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/native-stack": "^6.5.0",
+    "@react-navigation/stack": "5.9.0",
     "@ui-kitten/components": "^5.1.1",
     "@ui-kitten/eva-icons": "^5.1.1",
     "add": "^2.0.6",
+    "axios": "^0.26.0",
     "buffer": "^5.4.3",
     "expo": "~44.0.0",
+    "expo-app-loading": "~1.3.0",
+    "expo-font": "~10.0.4",
     "expo-status-bar": "~1.2.0",
     "galio-framework": "^0.8.0",
     "gl-react": "^4.0.1",
@@ -24,11 +32,15 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-awesome-alerts": "^1.5.2",
+    "react-native-datatable-component": "^2.0.1",
+    "react-native-dropdown-picker": "^5.3.0",
     "react-native-element-dropdown": "^1.6.1",
     "react-native-floating-label-input": "^1.3.11",
     "react-native-paper": "^4.11.2",
     "react-native-reanimated": "1.13.2",
     "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.11.1",
     "react-native-svg": "12.1.1",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-vector-icons": "^9.0.0",
