--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "galio-framework": "^0.8.0",
     "gl-react": "^4.0.1",
     "gl-react-expo": "^4.0.1",
+    "lottie-react-native": "^5.0.1",
     "native-base": "^3.3.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-animated-loader": "^0.0.9",
     "react-native-awesome-alerts": "^1.5.2",
     "react-native-datatable-component": "^2.0.1",
     "react-native-dropdown-picker": "^5.3.0",
