--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-screens": "^3.11.1",
     "react-native-svg": "12.1.1",
     "react-native-svg-transformer": "^1.0.0",
+    "react-native-text-ticker": "^1.14.0",
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "^0.17.5"
   },
