añadido alaerta para usuario no existente en el login

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name":"Rutinas de Operación",
+    "name":"RUT-OP \r\n Antapaccay",
     "slug":"Rutinas_de_Operacion",
     "version": "1.0.0",
     "orientation": "portrait",
